--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:css": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/app.css --watch",
+    "build:css": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/app.css --minify"
   },
   "keywords": [],
   "author": "",
