--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,9 @@
-﻿RewriteEngine On
+RewriteEngine On
 
-# Serve existing files/folders directly (assets etc.)
+# If the requested file/folder exists, serve it as-is
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Otherwise route everything to index.php
+# Otherwise, route everything through the front controller
 RewriteRule ^ index.php [L]
